// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/settings.js should handle HAS_STARRED.SUCCESS 1`] = `
Object {
  "hasStarred": true,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showAppIcon": "both",
  "showNotifications": true,
  "showSettingsModal": false,
}
`;

exports[`reducers/settings.js should handle HAS_STARRED.SUCCESS 2`] = `
Object {
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showAppIcon": "both",
  "showNotifications": true,
  "showSettingsModal": false,
}
`;

exports[`reducers/settings.js should handle TOGGLE_SETTINGS_MODAL 1`] = `
Object {
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showAppIcon": "both",
  "showNotifications": true,
  "showSettingsModal": true,
}
`;

exports[`reducers/settings.js should handle UPDATE_SETTING 1`] = `
Object {
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": true,
  "playSound": true,
  "showAppIcon": "both",
  "showNotifications": true,
  "showSettingsModal": false,
}
`;

exports[`reducers/settings.js should handle UPDATE_SETTING 2`] = `
Object {
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": true,
  "participating": false,
  "playSound": true,
  "showAppIcon": "both",
  "showNotifications": true,
  "showSettingsModal": false,
}
`;

exports[`reducers/settings.js should return the initial state 1`] = `
Object {
  "hasStarred": false,
  "markOnClick": false,
  "openAtStartup": false,
  "participating": false,
  "playSound": true,
  "showAppIcon": "both",
  "showNotifications": true,
  "showSettingsModal": false,
}
`;
